--- a/readmeai/config/settings/ignore_list.toml
+++ b/readmeai/config/settings/ignore_list.toml
@@ -1,6 +1,6 @@
 # Directories, file extensions, and file names to be excluded from preprocessing.
 
-[blacklist]
+[ignore_list]
 directories = [
     ".DS_Store",
     ".dvc",
