--- a/readmeai/config/settings/config.toml
+++ b/readmeai/config/settings/config.toml
@@ -1,17 +1,17 @@
 # Default API Settings
 [api]
-content = "You're a brilliant Tech Lead and Software Engineer with a passion for open-source projects."
 rate_limit = 10
+system_message = "You're a brilliant Tech Lead and Software Engineer with a passion for open-source projects."
 
 # File Resources
 [files]
-blacklist = "blacklist.toml"
+ignore_list = "ignore_list.toml"
 commands = "commands.toml"
 languages = "languages.toml"
 markdown = "markdown.toml"
 parsers = "parsers.toml"
 prompts = "prompts.toml"
-shields_icons = "icons.json"
+shieldsio_icons = "shieldsio_icons.json"
 skill_icons = "skill_icons.json"
 
 # Git Repository Settings
@@ -21,91 +21,29 @@ repository = "https://github.com/eli64s/readme-ai"
 # Language Model API Settings
 [llm]
 api = "openai"
-base_url = "https://api.openai.com/v1/chat/completions"
-context_window = 4000
+base_url = "https://api.openai.com/v1/engines/"
+context_window = 3999
 encoder = "cl100k_base"
+host_name = "https://api.openai.com/"
+localhost = "http://localhost:11434/"
 model = "gpt-3.5-turbo"
-temperature = 0.9
-tokens = 650
+path = "v1/chat/completions"
+temperature = 0.0
+tokens = 699
 top_p = 0.9
 
 # Markdown Template Settings
 [md]
-# Markdown Default Settings
-alignment = "center"
-emojis = false
-image = ""
-placeholder = "<code>► INSERT-TEXT-HERE</code>"
-slogan = ""
-tables = ""
-width = "100"
-
-# Header Template
-header = """\
-<p align="{alignment}">
-  <img src="{image}" width="{width}" alt="project-logo">
-</p>
-<p align="{alignment}">
-    <h1 align="{alignment}">{repo_name}</h1>
-</p>
-<p align="{alignment}">
-    <em>{slogan}</em>
-</p>
-<p align="{alignment}">\n\t{shields_icons}<p>
-<p align="{alignment}">\n\t{badge_icons}</p>
-"""
-
 # Badges
-badge_color = "0080ff"
-badge_style = "flat"
-badge_icons = """\t<em>Developed with the software and tools below.</em>\n</p>\n<p align="{alignment}">\n\t{badge_icons}"""
-shields_icons = """
+badge_icons = """\t<em>Built with the tools and technologies:</em>\n</p>\n<p align="{align}">\n\t{badge_icons}"""
+shieldsio_icons = """
 <img src="https://img.shields.io/{host}/license/{full_name}?style={badge_style}&logo=opensourceinitiative&logoColor=white&color={badge_color}" alt="license">
 \t<img src="https://img.shields.io/{host}/last-commit/{full_name}?style={badge_style}&logo=git&logoColor=white&color={badge_color}" alt="last-commit">
 \t<img src="https://img.shields.io/{host}/languages/top/{full_name}?style={badge_style}&color={badge_color}" alt="repo-top-language">
 \t<img src="https://img.shields.io/{host}/languages/count/{full_name}?style={badge_style}&color={badge_color}" alt="repo-language-count">
 """
 skill_icons = """<a href="https://skillicons.dev">\n\t\t<img src="{}">\n\t</a>"""
-
-# Table of Contents
-quick_links = """
-## 🔗 Quick Links
-
-> - [📍 Overview](#-overview)
-> - [🧩 Features](#-features)
-> - [🗂️ Repository Structure](#️-repository-structure)
-> - [📦 Modules](#-modules)
-> - [🚀 Getting Started](#-getting-started)
->  - [⚙️ Installation](#️-installation)
->  - [🤖 Usage](#-usage)
->  - [🧪 Tests](#-tests)
-> - [🛠 Project Roadmap](#-project-roadmap)
-> - [🤝 Contributing](#-contributing)
-> - [🎗 License](#-license)
-> - [🔗 Acknowledgments](#-acknowledgments)
-
----
-"""
-
-toc = """<br><!-- TABLE OF CONTENTS -->
-<details>
-  <summary>Table of Contents</summary><br>
-
-- [📍 Overview](#-overview)
-- [🧩 Features](#-features)
-- [🗂️ Repository Structure](#️-repository-structure)
-- [📦 Modules](#-modules)
-- [🚀 Getting Started](#-getting-started)
-  - [⚙️ Installation](#️-installation)
-  - [🤖 Usage](#-usage)
-  - [🧪 Tests](#-tests)
-- [🛠 Project Roadmap](#-project-roadmap)
-- [🤝 Contributing](#-contributing)
-- [🎗 License](#-license)
-- [🔗 Acknowledgments](#-acknowledgments)
-</details>
-<hr>
-"""
+readmeai_badge = """<img src="https://img.shields.io/badge/readme--ai-8A2BE2?style=for-the-badge&logo=ReadMe&logoColor=white" alt="readme-ai">"""
 
 # Overview Template
 overview = """
@@ -118,17 +56,16 @@ overview = """
 
 # Features Template
 features = """
-## 🧩 Features
+## 👾 Features
 
 {0}
 
 ---
 """
 
-# Directory Structure Tree
-tree_depth = 3
+# Directory Structure
 tree = """
-## 🗂️ Repository Structure
+## 📂 Repository Structure
 
 ```sh
 {0}
@@ -140,7 +77,7 @@ tree = """
 # Codebase Summaries
 modules_widget = """<details closed><summary>{0}</summary>\n\n{1}\n\n</details>\n"""
 modules = """
-## 📦 Modules
+## 🧩 Modules
 """
 
 # Quickstart Template
@@ -149,56 +86,55 @@ quickstart = """
 
 ## 🚀 Getting Started
 
-**System Requirements:**
+### 🔖 Prerequisites
 
-* {system_requirements}
+{prerequisites}
 
-### ⚙️ Installation
+### 📦 Installation
 
-<h4>From <code>source</code></h4>
+Build the project from source:
 
-> 1. Clone the {repo_name} repository:
->
-> ```console
-> $ git clone {repo_url}
-> ```
->
-> 2. Change to the project directory:
-> ```console
-> $ cd {repo_name}
-> ```
->
-> 3. Install the dependencies:
-> ```console
-> $ {install_command}
-> ```
+1. Clone the {repo_name} repository:
+```sh
+❯ git clone {repo_url}
+```
+
+2. Navigate to the project directory:
+```sh
+❯ cd {repo_name}
+```
+
+3. Install the required dependencies:
+```sh
+❯ {install_command}
+```
 
 ### 🤖 Usage
 
-<h4>From <code>source</code></h4>
+To run the project, execute the following command:
 
-> Run {repo_name} using the command below:
-> ```console
-> $ {run_command}
-> ```
+```sh
+❯ {run_command}
+```
 
 ### 🧪 Tests
 
-> Run the test suite using the command below:
-> ```console
-> $ {test_command}
-> ```
+Execute the test suite using the following command:
+
+```sh
+❯ {test_command}
+```
 
 ---
 """
 
-# Project Roadmap Contributing, License, and Acknowledgments Sections
+# Roadmap Contributing, License, and Acknowledgments
 contribute = """
-## 🛠 Project Roadmap
+## 📌 Project Roadmap
 
-- [X] `► INSERT-TASK-1`
-- [ ] `► INSERT-TASK-2`
-- [ ] `► ...`
+- [X] **`Task 1`**: <strike>Implement feature one.</strike>
+- [ ] **`Task 2`**: Implement feature two.
+- [ ] **`Task 3`**: Implement feature three.
 
 ---
 
@@ -238,7 +174,7 @@ Contributions are welcome! Here are several ways you can contribute:
 <details closed>
 <summary>Contributor Graph</summary>
 <br>
-<p align="center">
+<p align="left">
    <a href="https://{host_domain}{{/{full_name}/}}graphs/contributors">
       <img src="https://contrib.rocks/image?repo={full_name}">
    </a>
@@ -253,11 +189,9 @@ This project is protected under the [SELECT-A-LICENSE](https://choosealicense.co
 
 ---
 
-## 🔗 Acknowledgments
+## 🙌 Acknowledgments
 
 - List any resources, contributors, inspiration, etc. here.
-
-[**Return**](#-overview)
 
 ---
 """
@@ -269,7 +203,7 @@ contact = """
   </sub><br>
 </p>
 
-<div align="{alignment}">
+<div align="{align}">
   <a href="https://github.com/eli64s"><img src="https://github.com/ultralytics/assets/raw/main/social/logo-social-github.png" width="3%" alt="eli64s GitHub"></a>
   <img src="https://github.com/ultralytics/assets/raw/main/social/logo-transparent.png" width="3%" alt="space">
   <a href="https://www.linkedin.com/company/ultralytics/"><img src="https://github.com/ultralytics/assets/raw/main/social/logo-social-linkedin.png" width="3%" alt="Ultralytics LinkedIn"></a>
@@ -280,11 +214,45 @@ contact = """
 """
 
 contributor_graph = """
-<p align="{alignment}">
+<p align="{align}">
   <a href="https://{host_domain}{/{full_name}/}graphs/contributors">
     <img src="https://contrib.rocks/image?repo={full_name}" />
   </a>
 </p>
 """
 
-custom_badge = """<img src="https://img.shields.io/badge/readmeai-{badge_color}?style={badge_style}&logo=ReadMe&logoColor=white&label=readme-ai" alt="project-name">"""
+cli_docs = """
+#### Command-Line Interface
+
+The project supports the following command-line interface options:
+
+```sh
+❯ {cli_command}
+```
+
+---
+"""
+
+api_docs = """
+#### API Documentation
+
+The project API documentation is available at: [API Documentation]({api_url}).
+
+---
+"""
+
+test_framework = """
+### 🧪 Testing
+
+This project uses **`{test_framework}`** for testing.
+
+- **`{test_framework}`**
+
+Execute the test suite using the following command:
+
+```sh
+❯ {test_command}
+```
+
+---
+"""
