--- a/readmeai/config/settings/markdown.toml
+++ b/readmeai/config/settings/markdown.toml
@@ -1,80 +1,30 @@
 # Markdown template code blocks to construct a README.md file.
 
 [md]
-# Markdown Default Settings
-alignment = "center"
-emojis = false
-image = ""
-placeholder = "<code>► INSERT-TEXT-HERE</code>"
-slogan = ""
-tables = ""
-
 # Header Template
 header = """\
-<p align="{alignment}">
-  <img src="{image}" width="100" alt="project-logo">
+<p align="{align}">
+  <img src="{image}" width="{width}" alt="project-logo">
 </p>
-<p align="{alignment}">
-    <h1 align="{alignment}">{repo_name}</h1>
+<p align="{align}">
+    <h1 align="{align}">{repo_name}</h1>
 </p>
-<p align="{alignment}">
+<p align="{align}">
     <em>{slogan}</em>
 </p>
-<p align="{alignment}">\n\t{shields_icons}<p>
-<p align="{alignment}">\n\t{badge_icons}</p>
+<p align="{align}">\n\t{shieldsio_icons}<p>
+<p align="{align}">\n\t{badge_icons}</p>
 """
 
 # Badges
-badge_color = "0080ff"
-badge_style = "flat"
-badge_icons = """\t<em>Developed with the software and tools below.</em>\n</p>\n<p align="{alignment}">\n\t{badge_icons}"""
-shields_icons = """
+badge_icons = """\t<em>Developed with the software and tools below.</em>\n</p>\n<p align="{align}">\n\t{badge_icons}"""
+shieldsio_icons = """
 <img src="https://img.shields.io/{host}/license/{full_name}?style={badge_style}&logo=opensourceinitiative&logoColor=white&color={badge_color}" alt="license">
 \t<img src="https://img.shields.io/{host}/last-commit/{full_name}?style={badge_style}&logo=git&logoColor=white&color={badge_color}" alt="last-commit">
 \t<img src="https://img.shields.io/{host}/languages/top/{full_name}?style={badge_style}&color={badge_color}" alt="repo-top-language">
 \t<img src="https://img.shields.io/{host}/languages/count/{full_name}?style={badge_style}&color={badge_color}" alt="repo-language-count">
 """
 skill_icons = """<a href="https://skillicons.dev">\n\t\t<img src="{}">\n\t</a>"""
-
-# Table of Contents
-quick_links = """
-## 🔗 Quick Links
-
-> - [📍 Overview](#-overview)
-> - [🧩 Features](#-features)
-> - [🗂️ Repository Structure](#-repository-structure)
-> - [📦 Modules](#-modules)
-> - [🚀 Getting Started](#-getting-started)
->   - [⚙️ Installation](#️-installation)
->   - [🤖 Usage](#-usage)
->   - [🧪 Tests](#-tests)
-> - [🛠 Project Roadmap](#-project-roadmap)
-> - [🤝 Contributing](#-contributing)
-> - [📄 License](#-license)
-> - [👏 Acknowledgments](#-acknowledgments)
-
----
-"""
-toc = """\
-<!-- TABLE OF CONTENTS -->
-<details>
-  <summary>Table of Contents</summary>
-
-- [📍 Overview](#-overview)
-- [🧩 Features](#-features)
-- [🗂️ Repository Structure](#-repository-structure)
-- [📦 Modules](#-modules)
-- [🚀 Getting Started](#-getting-started)
-  - [⚙️ Installation](#️-installation)
-  - [🤖 Usage](#-usage)
-  - [🧪 Tests](#-tests)
-- [🛠 Project Roadmap](#-project-roadmap)
-- [🤝 Contributing](#-contributing)
-- [📄 License](#-license)
-- [👏 Acknowledgments](#-acknowledgments)
-</details>
-<hr>
-"""
 
 # Overview Template
 overview = """
@@ -87,7 +37,7 @@ overview = """
 
 # Features Template
 features = """
-## 🧩 Features
+## 👾 Features
 
 {0}
 
@@ -97,7 +47,7 @@ features = """
 # Directory Structure Tree
 tree_depth = 3
 tree = """
-## 🗂️ Repository Structure
+## 📂 Repository Structure
 
 ```sh
 {0}
@@ -109,7 +59,7 @@ tree = """
 # Codebase Summaries
 modules_widget = """<details closed><summary>{0}</summary>\n\n{1}\n\n</details>\n"""
 modules = """
-## 📦 Modules
+## 🧩 Modules
 """
 
 # Quickstart Template
@@ -118,52 +68,63 @@ quickstart = """
 
 ## 🚀 Getting Started
 
-**System Requirements:**
+### 🔖 Prerequisites
 
-* {system_requirements}
+{requirements}
 
-### ⚙️ Installation
+### 📦 Installation
 
 <h4>From <code>source</code></h4>
 
-> 1. Clone the {repo_name} repository:
->
-> ```console
-> $ git clone {repo_url}
-> ```
->
-> 2. Change to the project directory:
-> ```console
-> $ cd {repo_name}
-> ```
->
-> 3. Install the dependencies:
-> ```console
-> $ {install_command}
-> ```
+1. Clone the {repo_name} repository:
+```sh
+❯ git clone {repo_url}
+```
+
+2. Change to the project directory:
+```sh
+❯ cd {repo_name}
+```
+
+3. Install the dependencies:
+```sh
+❯ {install_command}
+```
 
 ### 🤖 Usage
 
 <h4>From <code>source</code></h4>
 
-> Run {repo_name} using the command below:
-> ```console
-> $ {run_command}
-> ```
+Run {repo_name} using the command below:
+
+```sh
+❯ {run_command}
+```
 
 ### 🧪 Tests
 
-> Run the test suite using the command below:
-> ```console
-> $ {test_command}
-> ```
+Run the test suite using the command below:
+
+```sh
+❯ {test_command}
+```
 
 ---
 """
 
+usage = """\
+#### Using `{tool}`
+
+> [![{tool}]({tool_badge})]({tool_url})
+>
+> ```console
+> $ {run_command}
+> ```\n
+"""
+
 # Project Roadmap Contributing, License, and Acknowledgments Sections
 contribute = """
-## 🛠 Project Roadmap
+## 📌 Project Roadmap
 
 - [X] `► INSERT-TASK-1`
 - [ ] `► INSERT-TASK-2`
@@ -207,7 +168,7 @@ Contributions are welcome! Here are several ways you can contribute:
 <details closed>
 <summary>Contributor Graph</summary>
 <br>
-<p align="center">
+<p align="left">
    <a href="https://{host_domain}{{/{full_name}/}}graphs/contributors">
       <img src="https://contrib.rocks/image?repo={full_name}">
    </a>
@@ -216,13 +177,13 @@ Contributions are welcome! Here are several ways you can contribute:
 
 ---
 
-## 📄 License
+## 🎗 License
 
 This project is protected under the [SELECT-A-LICENSE](https://choosealicense.com/licenses) License. For more details, refer to the [LICENSE](https://choosealicense.com/licenses/) file.
 
 ---
 
-## 👏 Acknowledgments
+## 🙌 Acknowledgments
 
 - List any resources, contributors, inspiration, etc. here.
 
@@ -238,7 +199,7 @@ contact = """
   </sub><br>
 </p>
 
-<div align="{alignment}">
+<div align="{align}">
   <a href="https://github.com/eli64s"><img src="https://github.com/ultralytics/assets/raw/main/social/logo-social-github.png" width="3%" alt="eli64s GitHub"></a>
   <img src="https://github.com/ultralytics/assets/raw/main/social/logo-transparent.png" width="3%" alt="space">
   <a href="https://www.linkedin.com/company/ultralytics/"><img src="https://github.com/ultralytics/assets/raw/main/social/logo-social-linkedin.png" width="3%" alt="Ultralytics LinkedIn"></a>
@@ -249,7 +210,7 @@ contact = """
 """
 
 contributor_graph = """
-<p align="{alignment}">
+<p align="{align}">
   <a href="https://{host_domain}{/{full_name}/}graphs/contributors">
     <img src="https://contrib.rocks/image?repo={full_name}" />
   </a>
@@ -257,3 +218,7 @@ contributor_graph = """
 """
 
 custom_badge = """<img src="https://img.shields.io/badge/readmeai-{badge_color}?style={badge_style}&logo=ReadMe&logoColor=white&label=readme-ai" alt="project-name">"""
+
+slogan = ""
+
+tables = ""
