--- a/.dockerignore
+++ b/.dockerignore
@@ -56,17 +56,15 @@ notebooks/
 .pytest_cache/
 .ruff_cache/
 
-# Documentation
+# Mkdocs
+.cache
 docs/
 examples/
 mkdocs.yml
-Makefile
+site
 
 # Work In Progress (WIP)
 readmeai/cli/commands_line.py
 readmeai/cli/interactive.py
+readmeai/config/settings/prompts
 readmeai/config/settings/templates
-
-# Mkdocs
-.cache
-site
