--- a/readmeai/config/settings/prompts.toml
+++ b/readmeai/config/settings/prompts.toml
@@ -1,33 +1,6 @@
 # LLM prompts for various text generation tasks.
 
 [prompts]
-features_list = """Create a list of key features for a software framework. \
-Each feature should start with a relevant emoji that aligns with the feature’s theme. \
-The features should focus on various aspects of the framework, such as performance, scalability, flexibility, integration with other tools, automation, or any other significant benefit.
-
-Here’s an example structure:
-
-- 🚀 **Feature 1**: Describe a feature that highlights performance or efficiency.
-- 🔧 **Feature 2**: Emphasize flexibility or customization options available to users.
-- 🌐 **Feature 3**: Explain how the framework integrates with other tools or platforms to enhance the development experience.
-- 🔒 **Feature 4**: Highlight security measures that protect user data or the system.
-- ⚡ **Feature 5**: Focus on automation or any process that simplifies complex tasks.
-
-Each feature should be clear, concise, and no longer than two sentences, while maintaining a professional and engaging tone. \
-Feel free to vary the themes to cover a broad range of potential benefits.
-
-While generating the response, please reference the following codebase context information:
-
-CONTEXT:
-------------------------
-DEPENDENCIES: {1}
-DOCUMENTATION: {2}
-FILE CONTENTS: {3}
-------------------------
-
-Output must be in Markdown format. Cheers!
-"""
-
 features_table = """Hello! Please analyze the key technical capabilities and characteristics of the project {0} and describe them in a Markdown table format:
 
 |      | Feature         | Summary       |
@@ -86,66 +59,76 @@ Thank you for your hard work!
 """
 
 logo = """
-You are tasked with creating a simple, cute mascot icon in a minimalist style specifically designed as a standalone iPhone app icon. Your goal is to design an icon with a singular main centerpiece that defines the entire shape of the icon, without any external borders or background.
+Create a fun and vibrant app icon logo for a GitHub repository. The logo should be in the style of an Apple app icon - square with rounded corners. The icon should feature a singular, memorable character or object that represents the essence of the project, without any external background.
 
-First, review the project details:
+<PROJECT DETAILS>
+PROJECT NAME: {project_name}
+PROJECT OVERVIEW: {project_overview}
+PROJECT SLOGAN: {project_slogan}
+</PROJECT DETAILS>
 
-<project_name>
-{project_name}
-</project_name>
+Design Guidelines:
+1. Central Character: [Describe a relevant animal, mythical creature, tool, or object that relates to the project theme]. This character should be stylized and appealing, with a playful yet professional look.
 
-<project_overview>
-{project_overview}
-</project_overview>
+2. Color Scheme: Use colors that reflect the project's theme and complement the central character. The colors should be vibrant and eye-catching.
 
-<project_slogan>
-{project_slogan}
-</project_slogan>
+3. Style: Modern, slightly cartoonish, and memorable. The design should be simple enough to be recognizable at small sizes, but with enough detail to be interesting when viewed larger.
 
-Now, follow these detailed instructions to create the mascot icon:
+4. Layout: The central character or object should fill most of the square space, leaving some room for subtle elements or patterns that hint at the project's purpose or field.
 
-1. Use thick, rounded outlines to define the mascot's shape.
-2. Employ basic geometric shapes for facial features (e.g., dots for eyes, simple shapes for nose/mouth).
-3. Ensure a chunky, squat body proportion for a cute appearance.
-4. Incorporate distinctive features of the mascot animal/character/hero in a simplified form.
-5. Maintain a friendly, approachable expression.
-6. Fill the square app-icon canvas with the mascot, centered and occupying most of the space.
-7. The mascot's shape itself should form the icon boundary—no additional borders or background elements.
-8. The design should be visually complete and balanced without relying on a background.
+5. Text (Optional): If including text, limit it to a short acronym or simple logo type that integrates well with the visual elements.
 
-When designing the mascot, consider the following to incorporate the project's essence:
-- Reflect on the project name, overview, and slogan to capture the spirit of the project.
-- Choose colors, shapes, or elements that align with the project's purpose and values.
-- Ensure the mascot's expression and overall design convey the project's tone (e.g., friendly, professional, playful).
+6. Background: The icon itself should have a solid or gradient background color that's part of the overall design. Do not include any external background beyond the rounded square of the icon.
 
-To present your final design, follow these steps:
-1. Describe the mascot's overall appearance and how it relates to the project.
-2. Detail the specific geometric shapes used for the body and facial features.
-3. Explain the color choices and how they connect to the project's theme.
-4. Describe how the mascot's shape forms the icon boundary without additional elements.
-5. Justify how the design embodies the project's essence and purpose.
+7. Originality: Ensure the design is original and doesn't infringe on any existing copyrights or trademarks.
 
-Present your final design description inside <mascot_design> tags. Remember to focus on creating a standalone icon where the mascot's shape defines the boundaries and serves as the singular main centerpiece.
+Please describe the icon design in detail, focusing on the central character, color scheme, and any additional elements within the icon itself. Do not describe any elements outside of the rounded square app icon shape.
+"""
+
+_overview = """
+Create a concise and compelling overview of the {0} project, followed by a list of key features. The response should be structured as follows:
+
+1. Short Introduction (50-60 words):
+   Provide a brief overview of {0}, focusing on:
+   - The core problem it solves
+   - Its primary purpose and benefits
+   - The target audience or use cases
+
+   Use the following context for reference:
+   {1}
+
+2. Quick Feature List (5-6 bullet points):
+   List the main features or capabilities of {0}, each starting with a relevant emoji. For example:
+
+   - 🚀 **Feature 1**: Brief description (1 sentence max)
+   - 🔧 **Feature 2**: Brief description (1 sentence max)
+   - 🌐 **Feature 3**: Brief description (1 sentence max)
+   - 🔒 **Feature 4**: Brief description (1 sentence max)
+   - ⚡ **Feature 5**: Brief description (1 sentence max)
+
+   Ensure that the features highlight different aspects such as performance, scalability, flexibility, integration, automation, or any other significant benefits.
+
+Format the output in Markdown, structuring it as follows:
+
+**{0}** is ... [short introduction]
+
+With **{0}**, you can:
+
+- [Quick feature list]
 """
 
 overview = """
-Analyze the codebase, {0}, and provide a robust, yet succinct overview of the software project.
-Craft a paragraph that encapsulate the project's core use-case, value proposition, and target audience.
-Ensure the overview is engaging, informative, and free of technical jargon.
+Craft a compelling overview of the {0} project in about 50 words.
 
-While generating the project overview, please reference the following codebase details:
+Focus on:
+- The core problem it solves
+- Its key features and benefits
+- The target audience or use cases
 
-<CONTEXT>
-FILE SUMMARIES: {1}
-</CONTEXT>
+Consider these file summaries for context:
+{1}
 
-<ADDITIONAL INSTRUCTIONS>
-1. FOCUS: Elegantly present the project's core use-case and value proposition without technical details.
-2. EXCLUDE: technical jargon, code snippets, and implementation specifics, quotes, links.
-3. RESPONSE LENGTH: 50 maximum words.
-</ADDITIONAL INSTRUCTIONS>
-
-Thank you, have fun, and learn something new!
+Aim for a clear, engaging description that captures the essence of the project without technical jargon. The overview should flow naturally and give readers a quick understanding of the project's purpose and value.
 """
 
 slogan = """
@@ -157,11 +140,11 @@ While generating the slogan, please reference the following codebase details:
 FILE CONTENTS: {2}
 </CONTEXT>
 
-<REQUIRED INSTRUCTIONS>
-1. GOAL: Slogan should be clear, concise and memorable.
-2. DO NOT: Do not include the project's name your response!
-3. RESPONSE LENGTH: Maximum of 8 words.
-</REQUIRED INSTRUCTIONS>
+<INSTRUCTIONS>
+- Your response slogan should be 5-8 words long at most.
+- Slogan should be clear, concise and memorable.
+- DO NOT INCLUDE THE PROJECT NAME in the slogan.
+</INSTRUCTIONS>
 
-Be creative, think outside the box, and thank you for your hard work. Cheers!
+Be creative, think outside the box, and have fun. Cheers!
 """
