--- a/readmeai/config/settings/tool_config.toml
+++ b/readmeai/config/settings/tool_config.toml
@@ -3,9 +3,9 @@
 # -- Docker --------------------------------------------------------------------
 
 [default]
-install = "```sh\n❯ echo 'INSERT INSTALL COMMAND HERE'\n```"
-usage = "```sh\n❯ echo 'INSERT RUN COMMAND HERE'\n```"
-test = "```sh\n❯ echo 'INSERT TEST COMMAND HERE'\n```"
+install = "❯ echo 'INSERT-INSTALL-COMMAND-HERE'"
+usage = "❯ echo 'INSERT-RUN-COMMAND-HERE'"
+test = "❯ echo 'INSERT-TEST-COMMAND-HERE'"
 
 [containers]
 name = "Docker"
