--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "readmeai"
-version = "0.5.99"
+version = "0.5.99.post1"
 description = "Automated README file generator, powered by AI."
 authors = ["Eli <egsalamie@gmail.com>"]
 license = "MIT"
@@ -8,21 +8,24 @@ readme = "README.md"
 homepage = "https://github.com/eli64s/readme-ai"
 documentation = "https://eli64s.github.io/readme-ai"
 keywords = [
-    "ai",
     "ai-documentation",
+    "anthropic",
     "badge-generator",
+    "cli",
     "developer-tools",
-    "devtools",
     "documentation",
     "documentation-generator",
+    "gemini",
+    "gpt",
+    "gpt-4",
     "markdown",
     "markdown-generator",
-    "python",
-    "readme",
-    "readme-generator",
+    "markdown-md",
     "readme-md",
     "readme-md-generator",
+    "readme-generator",
     "readme-template",
+    "readme-md-generator",
 ]
 include = ["readmeai", "readmeai.*"]
 
@@ -42,10 +45,10 @@ pyyaml = "^6.0.1"
 structlog = "^24.4.0"
 tenacity = "^8.2.2"
 tiktoken = "^0.4.0"
-tomli = {version = "*", python = "<3.11"}
+tomli = { version = "*", python = "<3.11" }
 
-anthropic = {version = "*", optional = true}
-google-generativeai = {version = "*", optional = true}
+anthropic = { version = "*", optional = true }
+google-generativeai = { version = "*", optional = true }
 
 [tool.poetry.extras]
 anthropic = ["anthropic"]
@@ -68,7 +71,7 @@ pytest-xdist = "*"
 [tool.poetry.group.docs.dependencies]
 mkdocs = "*"
 mkdocs-git-revision-date-localized-plugin = "*"
-mkdocs-material = {version = "^9.5.39", extras = ["imaging"]}
+mkdocs-material = { version = "*", extras = ["imaging"] }
 mkdocs-minify-plugin = "*"
 
 [tool.poetry.group.anthropic.dependencies]
@@ -79,7 +82,7 @@ google-generativeai = "*"
 
 [tool.pytest.ini_options]
 addopts = [
-    "-vvv",
+    "-vv",
     "-rfEsxX",
     "--durations=10",
     "--numprocesses=auto",
