Fix cicd path error.

--- a/.github/workflows/mkdocs.yml
+++ b/.github/workflows/mkdocs.yml
@@ -23,6 +23,7 @@ jobs:
           poetry install
 
     - name: Build the MkDocs site
+      working-directory: ./docs
       run: poetry run mkdocs build
 
     - name: Deploy to GitHub Pages
