Fix mkdocs build error.

--- a/.github/workflows/mkdocs.yml
+++ b/.github/workflows/mkdocs.yml
@@ -24,7 +24,8 @@ jobs:
 
     - name: Build the MkDocs site
       working-directory: ./docs
-      run: poetry run mkdocs build
+      run: |
+          poetry run mkdocs build --site-dir ../site
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
