--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "readmeai"
-version = "0.6.2a0"
+version = "0.6.1"
 description = "Automated README file generator, powered by AI."
 authors = ["Eli Salamie <egsalamie@gmail.com>"]
 license = "MIT"
