Update pyproject pytest config.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -127,8 +127,8 @@ addopts = [
     "-vv",
     "-n=auto",
     "--durations=5",
-    "--fastest-mode=skip",
-    "--fastest-commit=main",
+    # "--fastest-mode=skip",
+    # "--fastest-commit=main",
     "--cov=readmeai",
     "--cov-append",
     "--cov-branch",
